k8s/05-ingress-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcana-ingress
  namespace: arcana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: arcana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arcana-api-service
                port:
                  number: 80
